# zipload

./: MANIFEST.in  README.md  netlify.toml  pyproject.toml  test_zipload.py  test_zipload_global.py  utils.py  zipload.py
.circleci/: config.yml
docs/: conf.py  index.rst
