[tool.poetry]
name = "zipload"
version = "0.1.0"
description = "A simply python module to load zip archives into your python path"
authors = ["Eli Uriegas <eliasuriegas@gmail.com>"]
packages = [
    { include = "zipload.py" },
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4"
sphinx = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
